Add unit tests for controllers and application configuration
- Created HealthControllerTest to verify health endpoint responses.
- Implemented MasterDataControllerTest for user and zone management endpoints.
- Added PublicControllerTest for public API functionalities including password reset and OTP.
- Developed ReportsControllerTest to validate reporting functionalities for shipments and users.
- Introduced SettingsControllerTest for user settings management.
- Created ShipmentControllerTest to test shipment creation, retrieval, and warehouse operations.
- Added application-test.yml for in-memory database configuration during tests.